--- a/index.html
+++ b/index.html
@@ -75,17 +75,41 @@
         </h3>
         <article>
           <ul>
-            <li><b>Library Management Application:</b></li>
+            <li><b>Kanbanify Web App:</b></li>
             <br />
+            <h4>Link to the project:
+                <a href="https://kiran-nyayapati.github.io/Kanbanify-App/">Kanbanify Web App:</a>
+            </h4>
+            <p>
+              Kanbanify is a simple and interactive Kanban board for task management. <br />
+              It allows users to add, edit, delete, and move tasks between "To Do," "Doing," and "Done" columns. 
+              Tasks persist using local storage.
+            </p>
+            <h4>Technology Stack used:</h4>
+            <p>Frontend: HTML / CCS / JavaScript</p>
+            <h4>Features:</h4>
             <ul>
               <li>
-                Link to the project:
-                <a href="https://www.amazon.in/"
-                  >Library Management Application</a
-                >
+                Add tasks to different boards
               </li>
-              <li>Developed in June 2024</li>
+              <li>
+                Drag and drop tasks between columns
+              </li>
+              <li>
+                Edit or delete tasks via right-click context menu
+              </li>
+              <li>
+                Saves tasks in local storage for persistence
+              </li>
+              <li>
+                Real-time task count updates
+              </li>
             </ul>
+          </ul>
+          <br />
+          <ul>
+            <li><b>Library Management Application:</b></li>
+            <br />
             <p>
               The Library Management Web Application is a comprehensive system
               designed to simplify the management of library operations. <br />
@@ -125,16 +149,10 @@
               </li>
             </ul>
           <br />
+          <br />
 
           <li><b>Job Portal Web Application:</b></li>
           <br />
-          <ul>
-            <li>
-              Link to the project:
-              <a href="https://www.facebook.com/">Job Portal Web Application</a>
-            </li>
-            <li>Developed in November 2023</li>
-          </ul>
           <p>
             The Job Portal Web Application is designed to connect job seekers
             with potential employers. <br />
@@ -173,6 +191,7 @@
               like job CRUD operations.
             </li>
           </ul>
+          <br />
         </article>
       </section>
 
