--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
         </h3>
         <article>
           <ul>
-            <li><b>Kanbanify Web App:</b></li>
-            <br />
-            <h4>Link to the project:
-                <a href="https://kiran-nyayapati.github.io/Kanbanify-App/">Kanbanify Web App:</a>
-            </h4>
+            <li><strong>Kanbanify Web App:</strong>
+              <br>
+              <h4>Link to the project:
+                  <a href="https://kiran-nyayapati.github.io/Kanbanify-App/">Kanbanify Web App:</a>
+              </h4>
+            </li>
             <p>
               Kanbanify is a simple and interactive Kanban board for task management. <br />
               It allows users to add, edit, delete, and move tasks between "To Do," "Doing," and "Done" columns. 
