added features to project

--- a/index.html
+++ b/index.html
@@ -87,23 +87,24 @@
               Tasks persist using local storage.
             </p>
             <h4>Technology Stack used:</h4>
-            <p>Frontend: HTML / CCS / JavaScript</p>
+            <p>✅ Frontend: HTML / CSS / Bootstrap and JavaScript</p>
+            <p>✅ Other Tools: Git, GitHub for version control & GitHub Pages for hosting & deployment</p>
             <h4>Features:</h4>
             <ul>
               <li>
-                Add tasks to different boards
+                📝 Add tasks to different boards
               </li>
               <li>
-                Drag and drop tasks between columns
+                🎨 Drag and drop tasks between columns
               </li>
               <li>
-                Edit or delete tasks via right-click context menu
+                ✏️ Edit or delete tasks via right-click context menu
               </li>
               <li>
-                Saves tasks in local storage for persistence
+                💾 Saves tasks in local storage for persistence
               </li>
               <li>
-                Real-time task count updates
+                📊 Real-time task count updates
               </li>
             </ul>
           </ul>
@@ -119,7 +120,7 @@
               administrators & librarians alike.
             </p>
             <h4>Technology Stack used:</h4>
-            <p>Frontend: React</p>
+            <p>✅ Frontend: React</p>
             <ul>
               <li>
                 React Framework: Provides a dynamic and interactive UI for
@@ -134,7 +135,7 @@
                 backend services.
               </li>
             </ul>
-            <p>Backend: Java</p>
+            <p>✅ Backend: Java</p>
             <ul>
               <li>
                 Spring Boot Framework: Backend for handling business logic and
@@ -162,7 +163,7 @@
             recruiters for recruitment and career growth.
           </p>
           <h4>Technology Stack used:</h4>
-          <p>Frontend: React</p>
+          <p>✅ Frontend: React</p>
           <ul>
             <li>
               React Framework: Enables a dynamic, responsive, and interactive
@@ -177,7 +178,7 @@
               services.
             </li>
           </ul>
-          <p>Backend: Java</p>
+          <p>✅ Backend: Java</p>
           <ul>
             <li>
               Spring Boot Framework: Provides a powerful backend infrastructure
